[tool.poetry]
name = "mockbeat"
version = "0.1.0"
description = ""
authors = ["xander_pronin <xanderpronin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pydantic = "^1.10.7"
Django = "^4.2"
psycopg2-binary = "^2.9.6"
strenum = "^0.4.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
